feat(android): add secure kiosk enrollment and hardware boundary